# stream_platform

./: .gitignore  CMakeLists.txt  CMakeListsqt.txt  README.md  client.cpp  client_tcp.cpp  main_test.cpp  server_tcp.cpp
chat/: chat_client.cpp  chat_client.h  chat_server.cpp  chat_server.h  protocol.h
client_window/: client_window.cpp  client_window.h  client_window.ui
gstreamer_scripts/: audio  video
main_tests/: main_test_client.cpp  main_test_server.cpp
main_window/: mainwindow.cpp
my_qthread/: my_qthread.cpp  my_qthread.h
project/include/: base_exception.h  client.hpp  streamer.hpp
project/src/: base_exception.cpp  client.cpp  streamer.cpp
project/video/: CMakeLists.txt
project/video/include/: reciever.h  transceiver.h
project/video/src/: reciever.cpp  transceiver.cpp
qt/client_window/: client_window.cpp  client_window.h  client_window.ui
qt/main_window/: mainwindow.cpp  mainwindow.h  mainwindow.ui
qt/my_qthread/: my_qthread.h
qt/role_settings_window/: second_window.cpp  second_window.h  second_window.ui
qt/streamer_window/: streamer_window.cpp  streamer_window.h  streamer_window.ui
qt/video_reciever/: video_receiver.cpp  video_receiver.h
role_settings_window/: second_window.cpp  second_window.h  second_window.ui
sample/: CMakeLists.txt  main.cpp
second fail/: widget.cpp  widget.h  widget.ui
second_window/: second_window.cpp  second_window.h  second_window.ui
video_reciever/: video_receiver.cpp  video_receiver.h
